completed the backend for feature one

--- a/onlinebookstore/src/main/resources/application.properties
+++ b/onlinebookstore/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:BOOK-STORE-DEV
+spring.datasource.url=jdbc:h2:tcp://localhost/~/testDataBase1
 spring.datasource.username=sa
 spring.datasource.password=sa
 
@@ -7,3 +7,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.data.rest.base-path=/api/v1
+spring.h2.console.enabled=true
+
+spring.jpa.hibernate.ddl-auto=update
