--- a/onlinebookstore/src/main/resources/application.properties
+++ b/onlinebookstore/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:tcp://localhost/~/testDataBase1
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/book-store-dev
+spring.datasource.username=bookstoredev
+spring.datasource.password=alliswell
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.data.rest.base-path=/api/v1
 spring.h2.console.enabled=true
